# hasim

./: .gitignore  Makefile.am  Makefile.in  README  changes  configure  configure.in
admin/: mytags
base/: hasim-config.cpp  hasim-config.h
config/bm/bluespec/: demo.cfx  demos.cfx
config/bm/hasim/: demos.cfx
docs/: Makefile
docs/docbook/: Makefile  README
docs/docbook/style/: README
docs/docbook/xml/: hasim.xml  style-guide.xml
docs/tutorials/fir-filter/: tutorial.tex
experiments/hasim/demos/: demos.benchmarks  demos.models
experiments/hasim/nightly/: nightly.benchmarks
experiments/hasim/quick/: quick.benchmarks  quick.models
experiments/hasim/regression/: regression.benchmarks  regression.models
hasim/: #FunctionalPartition.bsv#  BypassUnit.bsv  DMem.bsv  Datatypes.bsv  Debug.bsv  FM_fetch.bsv  FunctionalPartition.bsv  Interfaces.bsv  Makefile  Mem.bsv  Primitive.bs  Testbench.bsv  TimingPartition.bsv  Types.bsv  ValueVector.bsv  freelist.hex
hasim/modules/common/: Debug.bsv  Ports.bsv
hasim/modules/controller/: SimpleController.bsv  TestHarness.bsv
hasim/tools/scripts/: configure-models
libperl/: Makefile.am  Makefile.in  README
libperl/HAsim/: MANIFEST  Makefile.PL  README
libperl/HAsim/lib/: HAsim.pm
models/toymips/: unpipelined.hmc
modules/base/common/: Debug.bsv  HASim.bsv  Links.bsv  hasim_base.awb
modules/base/smips/: SMIPS_Datatypes.bsv
modules/chip/toymips/: hasim_5stage_timing_partition.awb
modules/common/: Assertions.bsv  BRAM.bsv  BRAM.v  BypassFIFO.bsv  Commands.bsv  Connections.bsv  Connections_Deprecated.bsv  Debug.bsv  Events.bsv  FPGAFIFOs.bsv  FpgaDebugFile.bsv  HASim.bsv  Links.bsv  Ports.bsv  Stats.bsv  Token.bsv  Unit.bsv  Utils.bsv  backwards_compatability.bsv  bluespec_common.prj  hasim_base.awb  hasim_common.awb  hasim_common.dic  hasim_common_deprecated.awb  regfile_initialized.bsv
modules/common/base/: HASim.bsv  HASim_Deprecated.bsv  hasim_base.awb  hasim_base_deprecated.awb
modules/common/cache/: hasim-cache.awb
modules/common/fpgaenv-fast/: hasim-fast-fpga-environment.awb
modules/common/fpgalib/: FPGALib_Bluesim.bsv  FPGALib_XUP.bsv  fpgalib_software.awb  fpgalib_xup.awb
modules/common/modellib/: Commands.bsv  Events.bsv  Params.bsv  Ports.bsv  StallPorts.bsv  StatFIFO.bsv  Stats.bsv  hasim_modellib.awb  modellib.dic
modules/common/smart_synthesis_boundaries/: BuryConnections.bsv  ExposeConnections.bsv  WithConnections.bsv  smart_synth_boundaries.awb
modules/controller/: null-controller.awb  null-controller.bsv  standard-controller.awb  standard-controller.bsv
modules/controller/assertions/: AssertionsController.bsv  AssertionsControllerHeader.bsv  assert-streamid.dic  assert-streams.dic  hasim_assertions_controller.awb
modules/controller/assertions-controller/: AssertionsController.bsv  AssertionsControllerHeader.bsv  hasim_assertions_controller.awb
modules/controller/command/: command-controller.awb  command-controller.bsv
modules/controller/common/: Controller.bsv  SimpleController.bsv  System.bsv  TestCase.bsv  hasim_simple_controller.awb
modules/controller/connection-terminus/: ConnectionTerminus.bsv  connection-terminus.awb
modules/controller/events/: EventsController.bsv  (+3 more)
modules/controller/events-controller/: EventsController.bsv  EventsControllerHeader.bsv  hasim_events_controller.awb
modules/cpu/: hasim_cpu.awb
modules/model/: Makefile.include.template  Makefile.sub.template  Makefile.top.template  Model.bsv  SCons.hw.template  SCons.iface.template  SCons.top.template  default_software_system.awb  default_software_system.h  hasim_hwonly_model.awb  hasim_model.awb  hasim_model.bsv  main.cpp  main.h  model.awb  pure_bluespec_hybrid_model.awb  pure_bluespec_main.cpp  pure_bluespec_main.h  pure_bluespec_model.awb  pure_bluespec_model.bsv
modules/system/: hasim_system.awb
tools/: Makefile.am  Makefile.in
tools/hasim/: Makefile.am  Makefile.in
tools/hasim/hasim-front-panel/: Makefile.am  Makefile.in  hasim_front_panel.ui  hasim_front_panel.ui.h  hasim_front_panel_header.pl
tools/scripts/: Bluespec.pm  HAsim.pm  Makefile.am  Makefile.in  Makefile.include.template  Makefile.sub.template  Makefile.top.template  Templates.pm  Util.pm  Xilinx.pm  configure-models  hasim-bsc-mkdepend  hasim-configure  hasim-connect  hasim-dict  hasim-gen-black-box  hasim-rrr-stubgen  hasim-xilinx-summary
(+910 files in other folders)
